--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
       <span class="small">by <a href="http://github.com/alfplayer">alfplayer</a></span></h1>
 
     <div class="description">
-      Smackr RSS Reader
+      Smackr
     </div>
 
     <h2>Contact</h2>
-<p> (jorge_sileo@hotmail.com)<br/>      </p>
+<p> (jorge_sileo@hotmail.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
